--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ inputs:
   dotnet-version:
     description: ".NET SDK version to install"
     required: false
-    default: "latest"
+    default: "8.0.x"
   global-json-file:
     description: "Path to global.json file to read version from"
     required: false
